# ShieldSky

./: .gitattributes  .gitignore  Dockerfile  README.md  render.yaml
assets/: semantic-timeline-panel.html
docs/: serial-alice-api-reuse.md  serial-alice-sky-mvp.md  sss-skyshield-architecture.md
rust/.claw/plugins/: installed.json
rust/crates/api/src/: lib.rs
rust/crates/api/src/providers/: anthropic.rs
rust/crates/api/tests/: proxy_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/src/: bash.rs  conversation.rs  hooks.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs
rust/crates/rusty-claude-cli/.claw/plugins/: installed.json
rust/crates/rusty-claude-cli/src/: init.rs  main.rs
rust/crates/rusty-claude-cli/tests/: compact_output.rs  mock_parity_harness.rs  output_format_contract.rs
rust/crates/sss-api/: Cargo.toml
rust/crates/sss-api/src/: canonical_views.rs  command_center_views.rs  dashboard_views.rs  handlers.rs  lib.rs  main.rs  map_views.rs  operational_timeline.rs  operational_visibility_views.rs  remediation_views.rs  router.rs  semantic_timeline.rs  state.rs  types.rs
rust/crates/sss-api/tests/: http_contract.rs
rust/crates/sss-core/: Cargo.toml
rust/crates/sss-core/examples/: mvp.rs
rust/crates/sss-core/src/: lib.rs
rust/crates/sss-forecast/: Cargo.toml
rust/crates/sss-forecast/src/: lib.rs
rust/crates/sss-ingest/: Cargo.toml
rust/crates/sss-ingest/src/: lib.rs
rust/crates/sss-passive-scanner/: Cargo.toml
rust/crates/sss-passive-scanner/src/: domain.rs  lib.rs  pipeline.rs  tests.rs
rust/crates/sss-passive-scanner/src/correlator/: event_matcher.rs  mod.rs  pattern_extractor.rs  risk_accumulator.rs  site_builder.rs
rust/crates/sss-passive-scanner/src/sources/: adsb_ingest.rs  fire_smoke_ingest.rs  infra_mapper.rs  mod.rs  notam_ingest.rs  orbital_ingest.rs  satellite_ingest.rs  weather_ingest.rs
rust/crates/sss-passive-worker/: Cargo.toml
rust/crates/sss-passive-worker/src/: config.rs  discovery.rs  execution.rs  lib.rs  logging.rs  main.rs  scheduler.rs  worker.rs
rust/crates/sss-response/: Cargo.toml
rust/crates/sss-response/src/: action_router.rs  anti_drone_handoff.rs  audit.rs  authorization.rs  lib.rs  policy_eval.rs  site_security_handoff.rs  tests.rs  webhook_dispatch.rs
rust/crates/sss-site-registry/: Cargo.toml
rust/crates/sss-site-registry/src/: asset.rs  exposure.rs  lib.rs  site.rs  zone.rs
rust/crates/sss-skyshield/: Cargo.toml
rust/crates/sss-skyshield-api/: Cargo.toml
rust/crates/sss-skyshield-api/src/: handlers.rs  lib.rs  main.rs  router.rs  state.rs  types.rs
rust/crates/sss-skyshield-api/tests/: http_contract.rs
rust/crates/sss-skyshield/src/: lib.rs  tests.rs
rust/crates/sss-skyshield/src/adapters/: airspace.rs  drone_radar.rs  eo_ir.rs  mod.rs  orbital_context.rs  rf_sensor.rs  smoke.rs  weather.rs
rust/crates/sss-skyshield/src/application/: assess_site_sky.rs  decide_recipients.rs  evaluate_impact.rs  mod.rs
rust/crates/sss-skyshield/src/domain/: decisions.rs  mod.rs  signals.rs  site.rs  threats.rs  zone.rs
rust/crates/sss-skyshield/src/engines/: behavior.rs  classification.rs  impact.rs  mod.rs  prediction.rs  signal_fusion.rs  track_engine.rs
rust/crates/sss-skyshield/src/policies/: datacenter.rs  mod.rs  solar.rs
rust/crates/sss-storage/: Cargo.toml
rust/crates/sss-storage/src/: lib.rs
rust/crates/tools/src/: lib.rs
rust/crates/uuid/: Cargo.toml
rust/crates/uuid/src/: lib.rs
src/: sss_blueprint.py
tests/: test_sss_blueprint.py
