[package]
name = "sss-forecast"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
sss-site-registry = { path = "../sss-site-registry" }
uuid = { path = "../uuid" }

[lints]
workspace = true
