[package]
name = "sss-passive-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sss-passive-worker"
path = "src/main.rs"

[dependencies]
sss-api = { path = "../sss-api" }
sss-site-registry = { path = "../sss-site-registry" }
sss-storage = { path = "../sss-storage" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
