[package]
name = "sss-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sss-core = { path = "../sss-core" }
sss-passive-scanner = { path = "../sss-passive-scanner" }
sss-site-registry = { path = "../sss-site-registry" }

[lints]
workspace = true
